Major Packaging Refactor